--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.2.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "zod": "^3.22.4"
   }
 }
