--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tsc-watch": "tsc --watch",
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "start": "node ./dist/index.js",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "deploy-vercel": "npx tsc && vercel --prod"
   },
   "author": "",
   "license": "ISC",
